--- a/RedditScraper.ipynb
+++ b/RedditScraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "                     client_secret='LziyMCB1X-6zJgIReTLeCo2_dWo', \\\n",
     "                     user_agent='CryptoScraper', \\\n",
     "                     username='parthematics', \\\n",
-    "                     password='ilovemath')"
+    "                     password='synapse')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
